--- a/app/src/main/res/layout/activity_routeinfo.xml
+++ b/app/src/main/res/layout/activity_routeinfo.xml
@@ -27,6 +27,19 @@
             mapbox:layout_constraintEnd_toEndOf="parent"
             mapbox:layout_constraintHorizontal_bias="0.6"
             mapbox:layout_constraintStart_toStartOf="parent" />
+        <Button
+            android:id="@+id/endNavigation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginBottom="24dp"
+            android:visibility="gone"
+            android:text="Rate Passengers"
+            mapbox:layout_constraintBottom_toBottomOf="@+id/mapView"
+            mapbox:layout_constraintEnd_toEndOf="parent"
+            mapbox:layout_constraintHorizontal_bias="0.6"
+            mapbox:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
