--- a/app/src/main/res/layout/daily_trip_row.xml
+++ b/app/src/main/res/layout/daily_trip_row.xml
@@ -21,41 +21,92 @@
             android:orientation="horizontal"
             >
 
-            <ImageView
-                android:id="@+id/imageView"
-                android:tag="image_tag"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
+            <LinearLayout
+                android:layout_width="102dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:src="@drawable/ic_arrow_head_casing"/>
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="190dp"
+                    android:layout_height="121dp"
+                    android:layout_gravity="top"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:src="@drawable/ic_travel"
+                    android:tag="image_tag" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="131dp"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/Source"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+
+                        android:text="Source"
+                        android:textAlignment="center"
+                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:textColor="#070606" />
+
+                    <TextView
+                        android:id="@+id/Destination"
+                        android:layout_width="200dp"
+                        android:layout_height="34dp"
+                        android:layout_gravity="center_horizontal"
+
+                        android:text="Destination"
+                        android:textAlignment="center"
+                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:textColor="#070606" />
+                </LinearLayout>
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
                 android:layout_weight="2"
-                android:orientation="vertical"
-                >
+                android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/textViewName"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/Title"
+                    android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="10dp"
-                    android:text="Android Name"
-                    android:textAppearance="?android:attr/textAppearanceLarge"/>
+                    android:layout_margin="5dp"
+                    android:text="Title"
+                    android:textAlignment="center"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                    android:textColor="#070606" />
 
                 <TextView
-                    android:id="@+id/textViewVersion"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/Frequency"
+                    android:layout_width="170dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="10dp"
+                    android:layout_margin="5dp"
 
-                    android:text="Android Version"
-                    android:textAppearance="?android:attr/textAppearanceMedium"/>
+                    android:text="Frequency"
+                    android:textAlignment="center"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:textColor="#070606" />
+
+                <TextView
+                    android:id="@+id/Time"
+                    android:layout_width="170dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_margin="5dp"
+
+                    android:text="Time"
+                    android:textAlignment="center"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:textColor="#070606" />
 
             </LinearLayout>
         </LinearLayout>
