--- a/app/src/main/res/layout/activity_peer_to_peer.xml
+++ b/app/src/main/res/layout/activity_peer_to_peer.xml
@@ -30,9 +30,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/peer_recycler_view"
+            android:layout_alignParentRight="true"
             android:layout_gravity="end|bottom"
-            android:layout_marginLeft="350dp"
             android:layout_marginBottom="37dp"
+            android:layout_marginRight="10dp"
             android:background="@android:color/transparent"
             android:gravity="center"
             android:paddingTop="200dp"
