--- a/app/src/main/res/layout/activity_launch.xml
+++ b/app/src/main/res/layout/activity_launch.xml
@@ -20,7 +20,7 @@
         android:textColor="#454545"
         android:gravity="center_horizontal"
         android:layout_alignParentBottom="true"
-        android:text="Making journeys beautiful" />
+        android:text="Enough of ME time, Let us WE time" />
 
 </RelativeLayout>
 
