--- a/app/src/main/res/layout/recyclerview_items.xml
+++ b/app/src/main/res/layout/recyclerview_items.xml
@@ -71,31 +71,14 @@
                         android:orientation="vertical">
 
                         <TextView
-                            android:id="@+id/peer_source_latitude"
+                            android:id="@+id/peer_source_name"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textAlignment="center"
                             android:textStyle="bold"
                             tools:text="Test" />
-
                         <TextView
-                            android:id="@+id/peer_source_longitude"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:textAlignment="center"
-                            android:textStyle="bold"
-                            tools:text="Test" />
-
-                        <TextView
-                            android:id="@+id/peer_destination_latitude"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:textAlignment="center"
-                            android:textStyle="bold"
-                            tools:text="Test" />
-
-                        <TextView
-                            android:id="@+id/peer_destination_longitude"
+                            android:id="@+id/peer_destination_name"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textAlignment="center"
