--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,9 @@
     <color name="red_color">#038B91</color>
     <color name="cream">#EEDBC7</color>
     <color name="yellowish_green">#D8BC0A</color>
-
+    <color name="red">#FF0000</color>
+    <color name="blue">#0000FF</color>
+    <color name="darkGreen">#008B00</color>
 
 
 
