--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -5,7 +5,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.activities.MapFragment">
+        tools:context=".ui.fragments.MapFragment">
 
         <LinearLayout
             android:id="@+id/top_navigation"
