--- a/app/src/main/res/layout/activity_user_rating.xml
+++ b/app/src/main/res/layout/activity_user_rating.xml
@@ -11,6 +11,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/Rate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|center"
+            android:gravity="center"
+            android:text="Rate" />
+
     </LinearLayout>
 
 </layout>
