--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -3,23 +3,26 @@
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="176dp"
+        android:layout_height="140dp"
         android:background="@color/colorAccent"
         android:gravity="bottom"
         android:orientation="vertical"
-        android:padding="16dp"
+        android:id="@+id/top"
         android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
         <ImageView
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:src="@drawable/ic_navigation_image" />
-
+            android:layout_width="110dp"
+            android:layout_height="110dp"
+            android:paddingTop="8dp"
+            android:layout_alignParentTop="true"
+            android:paddingLeft="10dp"
+            android:id="@+id/headerImage" />
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingTop="8dp"
-            android:text="Journey Sharing Commute Menu"
+            android:layout_height="match_parent"
+            android:paddingTop="10dp"
+            android:id="@+id/headerUsername"
+            android:paddingLeft="20dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     </LinearLayout>
