--- a/app/src/main/res/layout/fragment_peer_to_peer.xml
+++ b/app/src/main/res/layout/fragment_peer_to_peer.xml
@@ -65,22 +65,6 @@
             android:layout_marginTop="80dp"/>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fabGoToStart"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/peer_recycler_view"
-            android:layout_alignParentEnd="true"
-            android:layout_gravity="end|bottom"
-            android:layout_marginBottom="120dp"
-            android:layout_marginEnd="10dp"
-            android:background="@android:color/transparent"
-            android:gravity="center"
-            android:paddingTop="200dp"
-            android:src="@drawable/ic_people_green_24dp"
-            android:tooltipText=" Enter Destination"
-            android:visibility="invisible" />
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/startNavigation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -93,8 +77,7 @@
             android:gravity="center"
             android:paddingTop="200dp"
             android:src="@drawable/ic_btn_navigation"
-            android:tooltipText=" Enter Destination"
-            android:visibility="visible" />
+            android:tooltipText="Start Navigation" />
 
         <FrameLayout
             android:id="@+id/initializeProgressBar"
