Changed the UI of Settings page

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="red">#FF0000</color>
     <color name="blue">#0000FF</color>
     <color name="darkGreen">#008B00</color>
+    <color name="userDetailsBlue">#2D529C</color>
 
 
 
